css/style.css
body { 
	margin: 4em 6em 0 4em; 
	padding: 0; 
	background: #fff;
	font-family: 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;  
}

img { 
	border: 0px solid white; 
}

p {
	text-align: justify;
}

a { 
	color: #44A; 
	text-decoration: none; 
}

a:hover { 
	text-decoration: underline; 
}

h1 {
	font-size: 32pt;
	font-weight: bold;
}

h1 span.damped {
	color: #d0d0d0;
	font-weight: normal;
}

h2 {
	font-size: 16pt;
}

h3 {
	margin: 2em 0 0 0;
	font-size: 14pt;
	color: #909090;
}

pre {
	font-size: 10px;
	padding: 0;
	margin: 1em;
	background: #f0f0f0;
	border: 1px solid #ccc;
	line-height: 20px;
	overflow: auto;
	overflow-Y: hidden;
}

pre code {
	padding: 10px 10px 10px 20px;
	display: block;
}

#translate-content pre {
	margin: 2em 0 0 0;	
}

#menu {
	position: absolute;
	top: 10px;
	right: 20px;
	font-size: 12pt;
}

#menu span {
	cursor: pointer;
	color: #44A;
	margin: .2em;
}

#menu span.active {
	cursor: pointer;
	color: #44A;
	font-size: bold;
	border-bottom: 3px solid #c0c0c0;
}

#docURL {
	font-size: 130%;
}

#doTranslate {
	font-size: 140%;	
}

#translate-examples-content {
	margin: .3em 0 0 0;
	font-size: 80%;
/*	text-align: left;*/
}

.translate-examples {
	color: #181;
	cursor: pointer;
}


#from, #to {
	margin: 0;
	font-size: 80%;
}

#fromtosel {
	margin: 1.5em 0 0 0;
}

#translate-content, #API-content, #about-content {
	margin: 0;
}

#translate-content {
	padding: 3em 0 0 0;
	text-align: center;
}


#API-content, #about-content {
	display: none;
}

.API {
	margin: 2em 1em 2em 1em;
	padding: 1em;
	border: 2px solid #181;
	-webkit-border-radius: 2px;
	-moz-border-radius: 2px;
	border-radius: 2px;
}

#resultcontainer {
	display: none;
}

.fig {
	padding: 1em;
	text-align: center;
	margin: 0 auto;
	margin-top: 30px;
	margin-bottom: 30px;
	width: 600px;
	-moz-box-shadow: 3px 3px 4px #000;
	-webkit-box-shadow: 3px 3px 4px #000;
	box-shadow: 3px 3px 4px #000;
	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#000000')";
	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#000000');
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
}

#footer {
	width: 580px;
	text-align: center;
	margin: 0 auto;
	
}

#footer-content {
	font-size: 8pt;
	color: #666;
	padding: 0 0 .5em 0;
	margin-top: 4em;
	margin-bottom: 1em;
}

